# acumatica-cli

./: .env.gpg  .gitignore  CHANGELOG.md  CLAUDE.md  Makefile  NOTICE  README.md  SPEC.archive.md  SPEC.md  pyproject.toml
.claude/: check-extras.md
.github/workflows/: ci.yml  release.yml
.spec/: check-extras.md
.spec/scripts/: check-all  check-extras.sh
docs/: ac-exe.md  cli.md  distribution.md  rest-api.md
journal/: 2026-07-07.md  2026-07-08.md  2026-07-09.md  2026-07-10.md  2026-07-11.md  2026-07-12.md  2026-07-13.md  index.md
scripts/: check-ascii  ps-remote
src/acumatica_cli/: bootstrap.py  bootstrap_plugin.cs  bootstrap_project.xml  cli.py  client.py  config.py  extract.py  extract_manifest.yaml  firstlogin.py  models.py  output.py  run.py  seed.py  target.py  tenant.py
src/acumatica_cli/templates/: acu.yaml  env
src/acumatica_cli/templates/baseline/: 50-gl-preferences.yaml  60-ledger-company.yaml  uoms.yaml
src/acumatica_cli/templates/bootstrap/: company.yaml  credit-terms.yaml  features.yaml
src/acumatica_cli/templates/distribution/: README.md
src/acumatica_cli/templates/distribution/baseline/: 20-accounts.yaml
src/acumatica_cli/templates/distribution/master/: 51-warehouse-locations.yaml  52-warehouse-defaults.yaml  75-vendors.yaml
src/acumatica_cli/templates/distribution/scenario/: 10-seed-capital.yaml  20-buy-gateways.yaml  30-build.yaml  40-sell.yaml  buy-sell.yaml
src/acumatica_cli/templates/setup/: 10-financial-year.yaml  20-master-calendar.yaml  30-open-periods.yaml
tests/: conftest.py  test_bootstrap.py  test_check_all.py  test_check_ascii.py  test_check_extras.py  test_cli.py  test_client.py  test_completion.py  test_config.py  test_extract.py  test_output.py  test_ps_remote.py  test_run.py  test_seed.py  test_target.py  test_tenant.py
tests/e2e/: conftest.py  test_distribution_flavor.py  test_extract_roundtrip.py  test_multiorg_extract.py  test_provision_lifecycle.py
