[project]
name = "acumatica-cli"
version = "0.10.3"
description = "Acumatica ERP Config-as-Code: tenant provisioning, baseline config, and reference data"
authors = [{ name = "Konstantin Borovik", email = "kb@lab5.ca" }]
license = "PolyForm-Noncommercial-1.0.0"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "click>=8.1",
    "httpx>=0.27",
    "pydantic>=2.7",
    "pydantic-settings>=2.5",
    "pyyaml>=6.0",
    "rich>=13",
]

[project.urls]
Homepage = "https://lab5.ca"
Repository = "https://github.com/kborovik/acumatica-cli"

[project.scripts]
acu = "acumatica_cli.cli:main"

[build-system]
requires = ["uv_build>=0.11,<0.12"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "basedpyright>=1.37.0",
    "pytest>=8",
    "ruff>=0.13.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = '-q -m "not e2e"'
markers = [
    "e2e: live end-to-end tests against a real Acumatica instance (make e2e)",
]

[tool.basedpyright]
typeCheckingMode = "strict"
pythonVersion = "3.14"
include = ["src/acumatica_cli/", "tests/"]
reportMissingTypeStubs = false
reportUnknownVariableType = false
reportUnknownMemberType = false
reportUnknownArgumentType = false
reportUnknownParameterType = false
reportUnknownLambdaType = false
reportUnusedFunction = "warning"

[tool.ruff]
target-version = "py314"
src = ["src"]

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
fixable = ["ALL"]
select = [
    "B",     # flake8-bugbear
    "C4",    # flake8-comprehensions
    "C90",   # mccabe
    "COM",   # flake8-commas
    "D",     # pydocstyle
    "E",     # pycodestyle
    "F",     # pyflakes
    "I",     # isort
    "N",     # pep8-naming
    "PL",    # Pylint
    "PT",    # flake8-pytest-style
    "RUF",   # Ruff-specific rules
    "SIM",   # flake8-simplify
    "T20",   # flake8-print: no bare print(); use acumatica_cli.output
    "TID",   # flake8-tidy-imports
    "UP",    # pyupgrade
    "W",     # pycodestyle warnings
]
ignore = [
    "PLR2004",  # magic values in comparisons
    "PLC0415",  # import not at top-level (lazy imports)
    "D100",     # Missing docstring in public module
    "D104",     # Missing docstring in public package
    "D105",     # Missing docstring in magic method
    "D107",     # Missing docstring in __init__
    "COM812",   # trailing commas
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["acumatica_cli"]

[tool.ruff.lint.per-file-ignores]
"src/acumatica_cli/cli.py" = [
    "PLR0913", # Click commands have many parameters by design
]
"tests/*" = [
    "D101", # test classes/functions are named descriptively instead
    "D102",
    "D103",
]
